hphp/hack/test/typecheck/finally_naming.php.exp
File "finally_naming.php", line 20, characters 12-13:
Variable `$b` is undefined, or not always defined. (Naming[2050])
File "finally_naming.php", line 16, characters 5-12:
Did you mean `$a` instead?
